k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  goapp
spec:
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app:  goapp
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  goapp
        image:  viniciusfca/goapp:lastest
        ports:
        - containerPort:  8080
          name:  goapp
