k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp
  namespace: default
spec:
  selector:
    app: goapp
  ports:
  - name: goapp
    protocol: TCP
    port: 8080 
    targetPort: 8080
