k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  labels:
    app: goapp
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /goapp
        pathType: Prefix
        backend:
          service:
            name: goapp
            port:
              number: 8080
